[project]
name = "earthquake"
version = "0.0.1"
authors = [
  { name="Wira Sanjaya", email="sanjayawira02@gmail.com" },
]
description = "his pacakage will get eartquake from BMKG (Indonesian Agency for Meteorological, Climatological and Geophysics) "
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Development Status :: 5 - Production/Stable"
]

[project.urls]
"Homepage" = "https://github.com/wira26/latest-indonesia-earthquake"
"Bug Tracker" = "https://github.com/pypa/sampleproject/issues"